package de.fhmaze.engine.action.result;

public final class FormActionResult extends OkayActionResult {}
