package de.fhmaze.engine.action.result;

// non-sealed = alle Klassen dürfen wieder erben
public non-sealed class OkayActionResult implements ActionResult {}
