package de.fhmaze.engine.action.result;

public final class SheetActionResult extends OkayActionResult {}
