@startuml action.result.success

' config includes
!include ../../config/macros.iuml
!include ../../config/styles.iuml

' diagram includes
!include action.result.puml
!include common.puml

' class diagram (https://plantuml.com/class-diagram)
$package(engine.action.result.success) {
    class OkayActionResult <<leaf>>
    engine.action.result.SuccessActionResult <|.. OkayActionResult

    class PositionActionResult <<leaf>> {
        + PositionActionResult(position: Position)
        + position(): Position
    }
    engine.action.result.SuccessActionResult <|.. PositionActionResult
    PositionActionResult --> "1" engine.common.Position : - position: Position {readOnly}

    class DirectionActionResult <<leaf>> {
        + DirectionActionResult(direction: Direction)
        + direction(): Direction
    }
    engine.action.result.SuccessActionResult <|.. DirectionActionResult
    DirectionActionResult --> "1" engine.common.Direction : - direction: Direction {readOnly}

    class FormActionResult <<leaf>>
    engine.action.result.SuccessActionResult <|.. FormActionResult

    class SheetActionResult <<leaf>>
    engine.action.result.SuccessActionResult <|.. SheetActionResult
}

@enduml
